Project

General

Profile

Actions

Bug #1476

closed

non-terminating thread functions should be marked __NORETURN

Added by Rich Lowe about 12 years ago. Updated about 12 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Start date:
2011-09-06
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

GCC4 warns when a function of non-void type doesn't return (or exit via functions which it knows exit). We should mark these functions __NORETURN

Actions #1

Updated by Rich Lowe about 12 years ago

  • Subject changed from non-determinating thread functions should be marked __NORETURN to non-terminating thread functions should be marked __NORETURN
Actions #2

Updated by Rich Lowe about 12 years ago

  • Status changed from New to Resolved
  • % Done changed from 70 to 100

r13449 commit:6ee1ec4bf42c

Actions

Also available in: Atom PDF