1476 non-terminating thread functions should be marked __NORETURN Reviewed by: Igor Kozhukhov <ikozhukhov@gmail.com> Reviewed by: Gordon Ross <gwr@nexenta.com> Reviewed by: Garrett D'Amore <gdamore@nexenta.com> Approved by: Eric Schrock <eric.schrock@delphix.com>