usr/src/cmd/nscd/nscd_getentctx.c
@@ -23,11 +23,14 @@
  * Use is subject to license terms.
  */
 
+#include <sys/ccompile.h>
+
 #include <stdlib.h>
 #include <assert.h>
 #include <string.h>
 #include <errno.h>
 #include <fcntl.h>
+
 #include "nscd_db.h"
 #include "nscd_log.h"
 #include "nscd_switch.h"
@@ -644,7 +647,7 @@ process_exited(pid_t pid)
  * FUNCTION: reclaim_getent_ctx
  */
 /*ARGSUSED*/
-static void *
+static void * __NORETURN
 reclaim_getent_ctx(void *arg)
 {
 	void			*cookie = NULL;
